--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -26,11 +26,12 @@
         <img src="../../assets/image-avatar.jpg" alt="avatar" />
       </div>
     </header>
-    <div class="goBack">
-      <img src="../../assets/icon-arrow-left.svg" alt="arrow left" />
-      <span>Go back</span>
-    </div>
+
     <div class="invoiceView">
+      <div class="goBack">
+        <img src="../../assets/icon-arrow-left.svg" alt="arrow left" />
+        <span>Go back</span>
+      </div>
       <div class="statusBox">
         <p>Status</p>
         <div class="statusBox-state">
@@ -93,6 +94,13 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="buttonsContainer2">
+        <button class="editBtn">Edit</button>
+        <button class="deleteBtn">Delete</button>
+        <button class="paidBtn">Mark as Paid</button>
+      </div>
+    </footer>
     <!-- ინვოისის ფეიჯის სტრუქტურა დაწერეთ ამ კომენტარის მაღლა -->
 
     <!-- ინვოისის დაედიტების სტრუქტურა დაწერეთ ამ კომენტარის ქვევით -->
