completed home-page-design

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
          <div class="header-logo">
            <img src="./assets/logo.svg" alt="icon">
          </div>
+         <div class="avatar-moon">
+          
+         </div>
           <img class="moon" src="./assets/icon-moon.svg" alt="icon-moon">
           <div class="avatar-cont">
             <img class="avatar" src="./assets/image-avatar.jpg" alt="image-avatar">
