add latest modification in files

--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -105,7 +105,7 @@
 
     <!-- ინვოისის დაედიტების სტრუქტურა დაწერეთ ამ კომენტარის ქვევით -->
     <main>
-      <h3>New Invoice</h3>
+      <h3>Edit #XM9141</h3>
       <p class="billTitle">Bill From</p>
       <form action="">
         <div class="labelAndInput">
@@ -207,9 +207,8 @@
     <footer>
       <div class="linearBoxDiv"></div>
       <div class="buttonsContainer">
-        <button class="discardBtn">Discard</button>
-        <button class="draftBtn">Save as Draft</button>
-        <button class="saveBtn">Save & Send</button>
+        <button class="cancelBtn">Cancel</button>
+        <button class="saveChangesBtn">Save Changes</button>
       </div>
     </footer>
   </body>
