add changes to dark mode

--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -19,7 +19,11 @@
       <div class="logoContainer">
         <div><img src="../../assets/logo.svg" alt="logo" /></div>
 
-        <img src="../../assets/icon-moon.svg" alt="moon icon" />
+        <img
+          class="moonIcon"
+          src="../../assets/icon-moon.svg"
+          alt="moon icon"
+        />
       </div>
 
       <div class="avatarContainer">
@@ -40,7 +44,7 @@
         </div>
       </div>
       <div class="invoiceSummary">
-        <h1>#XM9141</h1>
+        <h1 class="invoiceTitle">#XM9141</h1>
         <p class="projectDescription">Graphic Design</p>
         <div class="adressFrom">
           <p class="streetAdress">19 Union Terrace</p>
