add improvments in design, html structure

--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="headerInvoice">
       <div class="logoContainer">
         <div><img src="../../assets/logo.svg" alt="logo" /></div>
 
