--- a/index.html
+++ b/index.html
@@ -4,11 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./shared/header.css" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="./script.js" defer></script>
     <title>Document</title>
   </head>
+
   <body>
+    <header class="mainHeader">
+      <div class="header-div">
+        <div class="header-logo">
+          <img src="./assets/logo.svg" alt="icon" />
+        </div>
+        <img class="moon" src="./assets/icon-moon.svg" alt="icon-moon" />
+        <div class="avatar-cont">
+          <img
+            class="avatar"
+            src="./assets/image-avatar.jpg"
+            alt="image-avatar"
+          />
+        </div>
+      </div>
+      <!-- aqamde aris mobail versiis headeris divi, romeli unda gadavitano marcxena mxares tabze da desktopbze -->
+
+      <div class="header-main">
+        <div class="invoices">
+          <h1>Invoices</h1>
+          <p>7 invoices</p>
+        </div>
+
+        <button class="filter-button">Filter</button>
+        <img
+          class="arrow-down"
+          src="./assets/icon-arrow-down.svg"
+          alt="icon-arrow-down"
+        />
+        <div class="new-div">
+          <div class="plus">
+            <img src="./assets/icon-plus.svg" alt="plus" />
+          </div>
+
+          <p>New</p>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div class="invoice1">
+        <div class="code-name">
+          <span>#RT3080</span>
+          <p>Jensen Huang</p>
+        </div>
+        <div class="invoice-secondary-source">
+          <div class="date-price">
+            <span>Due 19 Aug 2021</span>
+            <p>£ 1,800.90</p>
+          </div>
+          <div class="pay-div">
+            <div class="oval-pay">
+              <div class="oval"></div>
+              <p>Paid</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- everything about invoices is up -->
+    </main>
     <!-- ინვოისების ჩამონათვალის სტრუქტურა დაწერეთ ამ კომენტარის მაღლა -->
     <!-- ინვოისის შექმნის სტრუქტურა დაწერეთ ამ კომენტარის ქვევით -->
   </body>
