--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../shared/header.css" />
     <link rel="stylesheet" href="./invoice.css" />
     <script src="./invoice.js" defer></script>
+
     <title>Document</title>
   </head>
   <body>
@@ -33,8 +34,10 @@
 
     <div class="invoiceView displayBlock">
       <div class="goBack">
-        <img src="../../assets/icon-arrow-left.svg" alt="arrow left" />
-        <span>Go back</span>
+        <a href="../../index.html">
+          <img src="../../assets/icon-arrow-left.svg" alt="arrow left" />
+          <span>Go back</span>
+        </a>
       </div>
       <div class="statusBox">
         <p>Status</p>
