--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -120,7 +120,7 @@
       <form action="">
         <div class="labelAndInput">
           <label for="streetAdress">Street Address</label>
-          <input type="text" name="streetAdress" />
+          <input class="" type="text" name="streetAdress" />
         </div>
 
         <div class="cityAndPostCode">
