fix moon locatin

--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
   </head>
 
   <body>
-    <header class="mainHeader">
+    <header>
       <div class="header-div">
-        <div class="header-logo">
-          <img src="./assets/logo.svg" alt="icon" />
-        </div>
-        <img class="moon" src="./assets/icon-moon.svg" alt="icon-moon" />
-        <div class="avatar-cont">
-          <img
-            class="avatar"
-            src="./assets/image-avatar.jpg"
-            alt="image-avatar"
-          />
-        </div>
+         <div class="header-logo">
+           <img src="./assets/logo.svg" alt="icon">
+         </div>
+         <div class="avatar-moon">
+
+          <img class="moon" src="./assets/icon-moon.svg" alt="icon-moon">
+          <div class="avatar-cont">
+            <img class="avatar" src="./assets/image-avatar.jpg" alt="image-avatar">
+          </div>
+            
+
+          </div>
       </div>
       <!-- aqamde aris mobail versiis headeris divi, romeli unda gadavitano marcxena mxares tabze da desktopbze -->
 
