fix invoice location in center

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
         <p class="billTitle">Bill to</p>
         <div class="labelAndInput">
-          <label for="clientName">Client’s Name</label>
+          <label for="clientName">Client's Name</label>
           <input type="text" name="clientName" />
         </div>
         <div class="labelAndInput">
-          <label for="clientEmail">Client’s Email</label>
+          <label for="clientEmail">Client's Email</label>
           <input type="text" name="clientEmail" />
         </div>
         <div class="labelAndInput">
