add delete prompt

--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -19,17 +19,18 @@
     <header class="mainHeader">
       <div class="header-div">
         <div class="header-logo">
-          <img src="../../assets/logo.svg" alt="icon" />
+          <img src="../../assets/logo.svg" alt="icon">
         </div>
-        <img class="moon" src="../../assets/icon-moon.svg" alt="icon-moon" />
-        <div class="avatar-cont">
-          <img
-            class="avatar"
-            src="../../assets/image-avatar.jpg"
-            alt="image-avatar"
-          />
-        </div>
-      </div>
+        <div class="avatar-moon">
+
+         <img class="moon" src="../../assets/icon-moon.svg" alt="icon-moon">
+         <div class="avatar-cont">
+           <img class="avatar" src="../../assets/image-avatar.jpg" alt="image-avatar">
+         </div>
+           
+
+         </div>
+     </div>
       <!-- aqamde aris mobail versiis headeris divi, romeli unda gadavitano marcxena mxares tabze da desktopbze -->
     </header>
 
@@ -114,6 +115,18 @@
     <!-- ინვოისის ფეიჯის სტრუქტურა დაწერეთ ამ კომენტარის მაღლა -->
 
     <!-- ინვოისის დაედიტების სტრუქტურა დაწერეთ ამ კომენტარის ქვევით -->
+      <!-- delete promptis divis dasawyisi -->
+      <div class="prompt">
+        <h1>Confirm Deletion</h1>
+        <p>Are you sure you want to delete invoice #XM9141? This action cannot be undone.</p>
+        <div class="buttons">
+            <button class="cancel">cancel</button>
+            <button class="delete">delete</button>
+        </div>
+    </div>
+
+
+      <!--  delete promptis divis dasasruli -->
     <main class="displayNone">
       <h3>Edit #XM9141</h3>
       <p class="billTitle">Bill From</p>
@@ -213,6 +226,8 @@
         </div>
         <button class="addNewItem">+ Add New Item</button>
       </form>
+
+    
     </main>
     <footer>
       <div class="linearBoxDiv displayNone"></div>
