add send post requeast in index.html create invoice page

--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="../../shared/header.css" />
     <link rel="stylesheet" href="./invoice.css" />
     <script src="./invoice.js" defer></script>
-    <!-- <script
+    <script
       src="../../shared/create-edit-invoice/createEditInvoice.js"
       defer
-    ></script> -->
+    ></script>
 
     <title>Document</title>
   </head>
