fix empty invoices page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,28 @@
       <!-- everything about invoices is up -->
     </main>
     <!-- ინვოისების ჩამონათვალის სტრუქტურა დაწერეთ ამ კომენტარის მაღლა -->
+   
+
+  <!-- emptyInvoices case is down --> 
+
+
+    <div class="invoice-empty">
+      <img src="./assets/illustration-empty.svg" alt="illustration empty">
+      <h1>There is nothing here</h1>
+      <p>Create an invoice by clicking the 
+          New button and get started</p>
+  </div>
+
+
+
+
+
+
+ 
+
+
     <!-- ინვოისის შექმნის სტრუქტურა დაწერეთ ამ კომენტარის ქვევით -->
+
     <main class="displayNone createInvoiceMain">
       <h3>Create Invoice</h3>
       <p class="billTitle">Bill From</p>
