fix invoice get request

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     </header>
 
     <main class="indexMain displayBlock">
-      <div class="invoice1">
+<!-- innerHtml for javascript -->
+
+      <!-- <div class="invoice1">
         <div class="code-name">
           <span>#RT3080</span>
           <p>Jensen Huang</p>
@@ -73,7 +75,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- everything about invoices is up -->
     </main>
     <!-- ინვოისების ჩამონათვალის სტრუქტურა დაწერეთ ამ კომენტარის მაღლა -->
