add fixed sending new invoice

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <main class="indexMain displayBlock">
-<!-- innerHtml for javascript -->
+      <!-- innerHtml for javascript -->
 
       <!-- <div class="invoice1">
         <div class="code-name">
@@ -118,11 +118,11 @@
         <p class="billTitle">Bill to</p>
         <div class="labelAndInput">
           <label for="clientName">Client's Name</label>
-          <input type="text" name="clientName" />
+          <input type="text" name="clientName" id="toClientName" />
         </div>
         <div class="labelAndInput">
           <label for="clientEmail">Client's Email</label>
-          <input type="text" name="clientEmail" />
+          <input type="text" name="clientEmail" id="clientEmail" />
         </div>
         <div class="labelAndInput">
           <label for="toStreetAdress">Street Address</label>
