--- a/pages/invoice/invoice.html
+++ b/pages/invoice/invoice.html
@@ -100,11 +100,11 @@
         <p class="billTitle">Bill to</p>
         <div class="labelAndInput">
           <label for="clientName">Client’s Name</label>
-          <input type="text" name="clientName" />
+          <input type="text" name="clientName" id="clientName" />
         </div>
         <div class="labelAndInput">
           <label for="clientEmail">Client’s Email</label>
-          <input type="text" name="clientEmail" />
+          <input type="text" name="clientEmail" id="clientEmail" />
         </div>
         <div class="labelAndInput">
           <label for="toStreetAdress">Street Address</label>
