add fixed errors in script.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       defer
     ></script>
     <script src="./script.js" defer></script>
+    <script src="./pages/invoice/invoice.js" defer></script>
 
     <title>Document</title>
   </head>
